# swingMomentum

./: .gitignore  CONSTITUTION.md  README.md  pyproject.toml
.claude/commands/: builder.md  reviewer.md
.claude/scripts/: watch_github_events.sh
.github/workflows/: ci.yml
configs/: smm_v1_0_0.yaml  smm_v1_1_0.yaml
configs/market_events/: 2026-04-06_sp500_constituent_changes.csv  2026-07-23_index_constituent_changes.csv  2026-07-23_sp500_constituent_changes.csv
configs/official_bar_supplements/: 2026-07-23_official_bar_supplements.csv  README.md
configs/price_events/: 2026-07-23_edgar_item_1_01.csv
configs/security_identities/: 2026-07-23_symbol_mappings.csv
configs/universe/: 2026-07-22_seed.csv  2026-07-22_sp500_ndx.csv  README.md
docs/: README.md  system-boundary.md
docs/decisions/: 2026-07-21_phase1_scope_and_stack.md  2026-07-22_m1_data_provider_and_universe.md  2026-07-22_m2_feature_engine_and_regime.md  2026-07-22_m3_watchlist_and_signal_lifecycle.md  2026-07-22_m4_signal_report_and_daily_task.md  2026-07-22_m5_risk_engine_and_planned_sizing.md  2026-07-22_m6_paper_broker_contract.md  2026-07-22_phase0_repo_foundation.md  2026-07-22_phase1_mvp_slicing_v1_1.md  2026-07-23_m7_daily_orchestration_and_audit_contract.md  2026-07-24_edgar_price_jump_verification.md  2026-07-24_index_change_volume_spike_verification.md  2026-07-24_market_data_retry_and_reconciliation_gates.md  2026-07-24_official_exchange_missing_bar_supplement.md  README.md
docs/plans/: 2026-07-21_phase1_implementation_plan.md  2026-07-22_phase0_foundation_implementation_plan.md  2026-07-22_phase1_implementation_plan_v1_1.md  README.md
docs/reviews/: 2026-07-22_phase1_plan_review.md  2026-07-22_repo_skeleton_review.md  README.md
docs/runbooks/: 2026-07-22_market_data_ingest.md  README.md
docs/specs/: Personal_Trading_Constitution_and_Swing_Momentum_Spec_v2.md  README.md
experiments/: README.md
experiments/_template/: config.yaml  hypothesis.md  result.md
notebooks/: README.md
scripts/: build_universe_snapshot.py
src/smm/: __init__.py
tests/: conftest.py
tests/fixtures/: README.md
tests/unit/: test_cache.py  test_cli_ingest.py  test_config_loader.py  test_cross_section.py  test_domain_models.py  test_fake_provider.py  test_feature_engine.py  test_features_cli.py  test_generator.py  test_manual_decisions.py  test_market_events.py  test_official_bar_supplements.py  test_paper_circuits.py  test_paper_costs.py  (+35 more)
(+63 files in other folders)
