[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smm"
version = "0.1.0"
description = "Swing Momentum Scanner — constitution-driven daily scanner and paper trading system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "swingMomentum contributors" }]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    # Core, not an extra: the Parquet cache and its idempotency test must run
    # in the network-free default CI (ADR 2026-07-22 §1).
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
# Real market data. Kept out of core so default installs and default CI stay
# network-free, and so business code cannot reach yfinance except through
# DataProvider (ADR §1).
market = [
    "yfinance>=0.2",
]

[project.scripts]
smm = "smm.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
smm = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Network tests are opt-in: `pytest -m network`. CI must never depend on a live
# market-data feed (ADR §1).
addopts = "-m 'not network'"
markers = [
    "network: hits a live external data source; deselected by default",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
